--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Educacion Basica</title>
 </head>
 <body>
 
   <h1>Visualización de Educación Básica en Colombia entre el 2011 y el 2017</h1>
   <p>Información de los niveles preescolar, básica, media y superior relacionada con indicadores de aprobación, cobertura, deserción, reprobados y repitencia por Departamentos en Colombia.</p>
   
-    <div class='tableauPlaceholder' id='viz1535515879751' style='position: relative'><noscript><a href='#'><img alt='Educación básica Colombia ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ed&#47;Educacinbsica&#47;EducacinbsicaColombia&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Educacinbsica&#47;EducacinbsicaColombia' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ed&#47;Educacinbsica&#47;EducacinbsicaColombia&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1535515879751');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-
-  <p>Por Julián Andrés Tamayo Valencia</p>
+   <div class='tableauPlaceholder' id='viz1535516091360' style='position: relative'><noscript><a href='#'><img alt='Educación básica Colombia ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;N8&#47;N8F5Y4SNX&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;N8F5Y4SNX' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;N8&#47;N8F5Y4SNX&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1535516091360');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+  <p>Julián Andrés Tamayo Valencia</p>
 </body>
 </html>
