--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +9,25 @@ theme: jekyll-theme-slate
 
   <h1>Visualización de Educación Básica en Colombia entre el 2011 y el 2017</h1>
   <p>Información de los niveles preescolar, básica, media y superior relacionada con indicadores de aprobación, cobertura, deserción, reprobados y repitencia por Departamentos en Colombia.</p>
- 
+  
+  <p><strong>Datos y base de datos</strong>
+  <p>Datos tomados de Datos Abiertos de Colombia, la base de datos de Estadística en educación básica por municipio</p>
+  <p>https://www.datos.gov.co/Educaci-n/ESTADISTICAS-EN-EDUCACION-BASICA-POR-MUNICIPIO/nudc-7mev</p>
+  
+  <p><strong>Tareas</strong></p>
+  <p>- Determinar los niveles de cobertura y su cumplimiento en los departamentos a nivel Colombia </p>
+  <p>- Analizar los niveles de Reprobación, deserción y repitencia </p>
+  <p>- Determinar que departamentos poseen niveles que demuestren la preocupación por la Educación Básica </p>
+  
+  <p><strong>Usuarios</strong></p>
+  <p>El principal usuario para el respectivo análisis puede ser la Secretaria de Educación en alguna entidad territorial, quienes basados en algunos de los descubrimientos encontrados en el periodo de tiempo entre el 2011 y el 2017, que permitan determinar cuales son los puntos más favorables sobre la educación básica en Colombia y como potenciarlos, al igual que combatir aquellos donde se encuentran falencias</p>
+  <p>De igual forma como usuario se puede tener en cuenta a cualquier Institución de Educación Básica que requiera análisis de los datos para un respectivo departamento</p>
+  
+  
   <p><strong>Insight</strong></p>
-    <div class='tableauPlaceholder' id='viz1535516479239' style='position: relative'><noscript><a href='#'><img alt='Educación básica Colombia ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ed&#47;Educacinbsica&#47;EducacinbsicaColombia&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Educacinbsica&#47;EducacinbsicaColombia' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ed&#47;Educacinbsica&#47;EducacinbsicaColombia&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1535516479239');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+  <h2>Visualización Sobre Educación Básica en Colombia</h2>
+  <div class='tableauPlaceholder' id='viz1535516479239' style='position: relative'><noscript><a href='#'><img alt='Educación básica Colombia ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ed&#47;Educacinbsica&#47;EducacinbsicaColombia&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Educacinbsica&#47;EducacinbsicaColombia' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ed&#47;Educacinbsica&#47;EducacinbsicaColombia&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1535516479239');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   
    <p>Julián Andrés Tamayo Valencia</p>
 </body>
