--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <h1>Visualización de Educación Básica en Colombia entre el 2011 y el 2017</h1>
-  <p>Tomando como base una muestra de la población de Educación Básica en Colombia, se tiene información de los niveles preescolar, básica, media y superior relacionada con indicadores de aprobación, cobertura, deserción, reprobados y repitencia por Departamentos.</p>
+  <p>Tomando como base una muestra de la población de Educación Básica en Colombia, se tiene información de los niveles transición, primaria, secuandaria y media relacionada con indicadores de aprobación, cobertura, deserción, reprobados y repitencia por Departamentos.</p>
   
   <p><strong>DATOS Y BASE DE DATOS</strong></p>
   <p>Datos tomados de Datos Abiertos de Colombia, la base de datos de Estadística en educación básica por municipio --> https://www.datos.gov.co/Educaci-n/ESTADISTICAS-EN-EDUCACION-BASICA-POR-MUNICIPIO/nudc-7mev</p>
